--- a/index.html
+++ b/index.html
@@ -33,11 +33,31 @@
             top: -200px;
             left: -850px;
         }
-        .links-container h3 {
+        .links-container-1 {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            position: relative;
+            top: -200px;
+            left: -800px;
+        }
+
+        
+        .links-container-1 h3 {
             margin-bottom: 20px;
             color: #333;
         }
         .links-container a {
+            display: block;
+            margin: 10px 0;
+            padding: 10px;
+            text-decoration: none;
+            color: #007BFF;
+            font-size: 18px;
+        }
+        .links-container-1 a {
             display: block;
             margin: 10px 0;
             padding: 10px;
@@ -50,6 +70,11 @@
             background-color: #e9ecef;
             border-radius: 4px;
         }
+        .links-container-1 a:hover {
+            color: #0056b3;
+            background-color: #e9ecef;
+            border-radius: 4px;
+        }
     </style>
 </head>
 <body>
@@ -57,6 +82,11 @@
     <div class="links-container">
         <h3>Text To Comic Converter</h3>
         <a href="https://okediya.github.io/text-to-comic/">Text to Comic</a>
+        <!-- Add more links here as needed -->
+    </div>
+    <div class="links-container-1">
+        <h3>Meme Gallery</h3>
+        <a href="https://okediya.github.io/meme-gallery/">Meme Gallery</a>
         <!-- Add more links here as needed -->
     </div>
 </body>
