--- a/index.html
+++ b/index.html
@@ -5,75 +5,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fun chat</title>
     <style>
-
-        h1 {
-            font-family: Arial, Helvetica, sans-serif;
-            align-self: center;
-            position: relative;
-            top: -300px;
-            right: -10%;
-        }
-
         body {
             font-family: Arial, sans-serif;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             margin: 0;
             background-color: #f0f0f0;
         }
-        .links-container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+        h1 {
+            font-family: Arial, Helvetica, sans-serif;
             text-align: center;
-            position: relative;
-            top: -200px;
-            left: -850px;
-        }
-        .links-container-1 {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            position: relative;
-            top: -200px;
-            left: -800px;
+            color: #333;
+            margin: 2rem 0;
+            font-size: clamp(1.5rem, 5vw, 2.5rem);
         }
 
-        
-        .links-container-1 h3 {
-            margin-bottom: 20px;
+        .links-container, .links-container-1 {
+            background-color: #fff;
+            padding: 1.5rem;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 90%;
+            max-width: 400px;
+            margin: 1rem auto;
+        }
+
+        .links-container h3, .links-container-1 h3 {
+            margin-bottom: 1.5rem;
             color: #333;
+            font-size: clamp(1.2rem, 4vw, 1.5rem);
         }
-        .links-container a {
+
+        .links-container a, .links-container-1 a {
             display: block;
-            margin: 10px 0;
-            padding: 10px;
+            margin: 0.5rem 0;
+            padding: 0.75rem;
             text-decoration: none;
             color: #007BFF;
-            font-size: 18px;
+            font-size: clamp(1rem, 3.5vw, 1.2rem);
         }
-        .links-container-1 a {
-            display: block;
-            margin: 10px 0;
-            padding: 10px;
-            text-decoration: none;
-            color: #007BFF;
-            font-size: 18px;
-        }
-        .links-container a:hover {
+
+        .links-container a:hover, .links-container-1 a:hover {
             color: #0056b3;
             background-color: #e9ecef;
             border-radius: 4px;
         }
-        .links-container-1 a:hover {
-            color: #0056b3;
-            background-color: #e9ecef;
-            border-radius: 4px;
+
+        /* Media query for larger screens */
+        @media (min-width: 768px) {
+            body {
+                flex-direction: row;
+                flex-wrap: wrap;
+                gap: 2rem;
+            }
+
+            .links-container, .links-container-1 {
+                width: 45%;
+                max-width: 350px;
+            }
+
+            h1 {
+                width: 100%;
+                font-size: clamp(2rem, 5vw, 3rem);
+            }
+        }
+
+        /* Media query for smaller screens */
+        @media (max-width: 480px) {
+            .links-container, .links-container-1 {
+                width: 95%;
+                padding: 1rem;
+            }
+
+            h1 {
+                font-size: clamp(1.2rem, 4.5vw, 2rem);
+            }
         }
     </style>
 </head>
